<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:gravity="bottom"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

            <EditText
                android:id="@+id/product_name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="20dp"
                android:inputType="textShortMessage"
                android:textSize="24sp"
                android:hint="@string/product_name"/>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="16dp"/>
        <RadioGroup
            android:id="@+id/quantity_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/quantity_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_low"/>
            <RadioButton
                android:id="@+id/quantity_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_medium"/>
            <RadioButton
                android:id="@+id/quantity_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_high"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:textSize="16sp"/>
            <RadioGroup
                android:id="@+id/priority_radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/priority_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_low"/>
                <RadioButton
                    android:id="@+id/priority_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_medium"/>
                <RadioButton
                    android:id="@+id/priority_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_high"/>
            </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textSize="16dp"/>
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/categories_chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </com.google.android.material.chip.ChipGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/add_product_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="48dp"
                    android:text="Dodaj produkt"
                    android:backgroundTint="@color/secondary_dark"
                    android:textColor="@color/white"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>